--- a/style.css
+++ b/style.css
@@ -9,16 +9,23 @@ h1 {
 ul {
   list-style-type: none;
 }
-li {
+.navBar li {
+  position: relative;
+  text-align: center;
   float: left;
 }
-#navBar {
+.navBar a {
+  float: none;
   display: block;
-  padding: 8px;
-  background-color: aquamarine;
+  padding: 25px 20px;
+  font-size: 15px;
   color: black;
+  text-align: center;
 }
 
-li a:hover {
+.navBar li a:hover {
   background-color: rgb(255, 213, 161);
+}
+footer {
+  font-size: 10px;
 }
